Fixed image shadow on small screen

--- a/css/style2.css
+++ b/css/style2.css
@@ -524,7 +524,7 @@ figcaption {
 
     .background-image {
         left: 0;
-        width: 99.5%;
+        width: 100%;
     }
 
     .move-right {
